--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -2,42 +2,57 @@
 
 /*Projects/Portfolio*/
 .projects {
-    background-color: black;
-    color: rgb(70, 175, 115);
-    text-align: center;
-    font-family: "Source Code Pro", monospace;
-    padding: 2em 0 2em 0;
+  background-color: black;
+  color: rgb(70, 175, 115);
+  text-align: center;
+  font-family: "Source Code Pro", monospace;
+  padding: 2em 0 2em 0;
 }
 
 .projects-title {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .projects-subtitle {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .portfolio {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 .portfolio-item {
-    background: rgb(70, 175, 115);
-    overflow: hidden;
+  background: rgb(70, 175, 115);
+  overflow: hidden;
 }
 
 .portfolio-img {
-    transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
+  transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear;
 }
 
 .portfolio-item:focus {
-    position: relative;
-    z-index: 2;
+  position: relative;
+  z-index: 2;
 }
 
 .portfolio-img:hover,
 .portfolio-item:focus .portfolio-img {
-    transform: scale(1.2);
-    opacity: 0.5;
+  transform: scale(1.2);
+  opacity: 0.5;
+}
+
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+/* Centered text */
+.centered {
+  color: rgb(70, 175, 115);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
