--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -2,119 +2,188 @@
 
 /*Services*/
 .my-services {
-    color: rgb(70, 175, 115);
-    text-align: center;
-    background-color: black;
-    padding-top: 1em;
-    background-image: url(../images/pexels-daniel-putzer-633409-3.jpg);
-    margin-bottom: 1em;
+  color: rgb(70, 175, 115);
+  text-align: center;
+  background-color: black;
+  padding-top: 1em;
+  background-image: url(../../assets/images/pexels-daniel-putzer-633409-3.jpg);
+  margin-bottom: 1em;
 }
 
 .services-title {
-    position: relative;
-    margin: 0.5em 0 0.5em 0;
-    font-size: 3rem;
+  position: relative;
+  margin: 0.5em 0 0.5em 0;
+  font-size: 3rem;
 }
 
 .services-title::after {
-    display: block;
-    width: 2em;
-    height: 1px;
-    opacity: 0.25;
+  display: block;
+  width: 2em;
+  height: 1px;
+  opacity: 0.25;
 }
 
 .services-subtitle {
-    font-family: "Source Code Pro", monospace;
-    font-size: 1.75rem;
+  font-family: "Source Code Pro", monospace;
+  font-size: 1.75rem;
 }
 
 .services {
-    font-size: 2rem;
-    font-family: "Source Code Pro", monospace;
+  font-size: 2rem;
+  font-family: "Source Code Pro", monospace;
 }
 
 .service {
-    max-width: 500px;
-    font-size: 1.25rem;
-    font-weight: 900;
-    margin-bottom: 6em;
+  max-width: 500px;
+  font-size: 1.25rem;
+  font-weight: 900;
+  margin-bottom: 6em;
 }
 
 /*Prject Button*/
-.projects-btn {
-    padding: 1em 3em;
-    background: rgb(70, 175, 115);
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 1rem;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: 900;
-    transition: transform 200ms ease-in-out;
+/*.btn-wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.projects-btn:hover {
-    transform: scale(1.2);
+.projects-btn {
+    min-width: 300px;
+    min-height: 60px;
+    font-family: "Source Code Pro", monospace;
+    font-size: 22px;
+    font-weight: 700;
+    color: #313133;
+    background: rgb(70, 175, 115);
+    background: linear-gradient(90deg, rgba(70, 175, 115, 1) 0%, rgba(70, 175, 115, 1) 100%);
+    border: none;
+    border-radius: 1000px;
+    box-shadow: 12px 12px 24px rgba(70, 175, 115, .64);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    padding: 10px;
 }
+
+.projects-btn::before {
+    content: '';
+    border-radius: 1000px;
+    min-width: calc(300px + 12px);
+    min-height: calc(60px + 12px);
+    border: 6px solid rgb(70, 175, 115);
+    box-shadow: 0 0 60px rgba(70, 175, 115, .64);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .3s ease-in-out 0s;
+}
+
+.projects-btn:hover,
+.projects-btn:focus {
+    color: #313133;
+    transform: translateY(-6px);
+}
+
+.projects-btn:hover::before,
+.projects-btn:focus::before {
+    opacity: 1;
+}
+
+.projects-btn::after {
+    content: '';
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    border: 6px solid rgb(70, 175, 115);
+    position: absolute;
+    z-index: -1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: ring 1.5s infinite;
+}
+
+.projects-btn:hover::after,
+.projects-btn:focus::after {
+    animation: none;
+    display: none;
+}
+
+@keyframes ring {
+    0% {
+        width: 30px;
+        height: 30px;
+        opacity: 1;
+    }
+
+    100% {
+        width: 300px;
+        height: 300px;
+        opacity: 0;
+    }
+}*/
 
 @media (min-width: 800px) {
-    .services {
-        display: flex;
-        max-width: 1000px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  .services {
+    display: flex;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    .service+.service {
-        margin-left: 2em;
-    }
+  .service + .service {
+    margin-left: 2em;
+  }
 }
 
 /*Tools*/
 .my-tools {
-    margin-top: 2em;
-    background-color: rgb(70, 175, 115);
-    background-size: cover;
-    color: black;
+  margin-top: 2em;
+  background-color: rgb(70, 175, 115);
+  background-size: cover;
+  color: black;
 }
 
 .tools-title {
-    font-size: 3rem;
-    padding: 0.5em 0 0.5em 0;
-    text-align: center;
+  font-size: 3rem;
+  padding: 0.5em 0 0.5em 0;
+  text-align: center;
 }
 
 .tools-title::after {
-    display: block;
-    width: 2em;
-    height: 1px;
-    margin: 0.5em auto 1em;
-    background: rgb(187, 190, 201);
-    opacity: 0.25;
+  display: block;
+  width: 2em;
+  height: 1px;
+  margin: 0.5em auto 1em;
+  background: rgb(187, 190, 201);
+  opacity: 0.25;
 }
 
 .tools {
-    display: inline;
-    margin: 0.5em auto 0 auto;
-    padding-bottom: 2em;
+  display: inline;
+  margin: 0.5em auto 0 auto;
+  padding-bottom: 2em;
 }
 
 .tool {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100em;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100em;
 }
 
 .tool:hover {
-    color: rgb(187, 190, 201);
+  color: rgb(187, 190, 201);
 }
 
 @media (min-width: 600px) {
-    .tools {
-        display: flex;
-        background: rgb(70, 175, 115);
-        color: black;
-        max-width: 1000px;
-    }
+  .tools {
+    display: flex;
+    background: rgb(70, 175, 115);
+    color: black;
+    max-width: 1000px;
+  }
 }
