--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,67 +1,71 @@
 @charset "utf-8";
 
 .nav {
-    background: rgb(70, 175, 115);
-    overflow: hidden;
+  background: rgb(70, 175, 115);
+  overflow: hidden;
 }
 
 .nav-logo {
-    margin: 1.1em 1em 0 1em;
-    text-align: center;
-    display: inline-block;
+  margin: 1.1em 1em 0 1em;
+  text-align: center;
+  display: inline-block;
 }
 
 .nav-ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    font-family: "Source Code Pro", monospace;
-    display: flex;
-    float: right;
-    font-weight: 600;
-    font-size: 1.2em;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-family: "Source Code Pro", monospace;
+  display: flex;
+  float: right;
+  font-weight: 600;
+  font-size: 1.2em;
 }
 
 .nav-ul-li {
-    display: inline-block;
+  display: inline-block;
 }
 
 .nav-ul-li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 .nav-ul-li a:hover {
-    background-color: black;
-    color: rgb(70, 175, 115);
+  background-color: black;
+  color: rgb(70, 175, 115);
 }
 
-.res-menu {
-    display: none;
-    visibility: hidden;
-}
+@media screen and (max-width: 910px) {
+  .nav-ul {
+    flex-direction: column;
+    height: 100%;
+    display: block;
+    float: center;
+  }
+  .nav-ul-li:nth-child(1) {
+    border-top: 1px solid black;
+  }
+  .nav-ul-li:last-child {
+    border-bottom: 1px solid black;
+  }
 
-@media screen and (max-width: 750px) {
-    .nav {
-        padding: 1.83em;
-    }
+  .nav-ul-li {
+    width: 100%;
+    border-top: 1px solid black;
+    text-align: center;
+    margin-right: 0px;
+  }
+  .nav-logo {
+    display: inline-block;
+    margin: 1.1em 1em 0.7em 1em;
+    text-align: center;
+  }
 
-    .nav-logo {
-        display: none;
-        visibility: hidden;
-    }
-}
-
-@media screen and (max-width: 750px) {
-    .nav {
-        padding: 1.83em;
-    }
-    
-    .nav-ul-li {
-        display: none;
-        visibility: hidden;
-    }
+  .nav-logo:hover {
+    color: rgb(187, 190, 201);
+  }
 }
